[package]
name = "upx"
version = "0.0.0"
edition = "2024"

[dependencies]
tokio = { version = "1.50.0", features = ["rt", "rt-multi-thread", "macros", "fs", "sync", "time", "io-std"] }
anyhow = "1.0.102"
clap = { version = "4.6.0", features = ["derive"] }
env_logger = "0.11.10"
ratatui = "0.30.0"
xdg = "3.0.0"
tui-input = "0.15.0"
tui-popup = "0.7.2"
tui-scrollview = "0.6.2"
log = "0.4.29"
crossterm = { version = "0.29.0", features = ["event-stream"] }
futures-util = "0.3.32"
color-eyre = "0.6.5"
